Fri Jun 22 09:14:41 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/Sender/Keyed_Test_Sender.idl:
        * connectors/dds4ccm/tests/KeyedSamples/Sender/Keyed_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/KeyedSamples/Sender/Keyed_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/KeyedSamples/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/KeyedWriter/Sender/Writer_Sender.idl:
        * connectors/dds4ccm/tests/KeyedWriter/Sender/Writer_Sender_exec.h:
        * connectors/dds4ccm/tests/KeyedWriter/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/KeyedWriter/descriptors/Plan.cdp:
          Do not start the test until a publication matched even has been received
          in the sender component.

Thu Jun 21 17:34:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Container_Base_T.cpp:
          Layout changes

        * tests/TTSConnContext/Sender/Sender_exec.cpp:
        * tests/TTSConnContext/TTSCConnector/TTSCConnector.idl:
        * tests/TTSConnContext/TTSCConnector/TTSCConnector_conn.cpp:
          Fixed compile problems with msvc

Thu Jun 21 13:43:20 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Sender/QCTL_Test_Sender.idl:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Sender/QCTL_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Sender/QCTL_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/descriptors/Plan.cdp:
          Added connector status listener. The test starts upon receiving a publication matched
          event from DDS.

Thu Jun 21 10:11:38 UTC 2012  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * ciao/Deployment/Handlers/Component_Handler.cpp:
        Solved msvc error.

Thu Jun 21 09:08:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
